--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Hola Mundo 03</string>
+    <string name="title_login">Mi App Android</string>
+    <string name="hint_name">Escriba su nombre</string>
+    <string name="hint_password">Escriba la contraseña</string>
+    <string name="enter">Ingresar</string>
 </resources>
