Se crea activity de contactos con ScrollView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="clean">Limpiar</string>
     <string name="save">Guardar</string>
     <string name="form">Formulario</string>
+    <string name="contacts">Contactos</string>
+    <string name="contact_example">Pepito Perez</string>
+    <string name="phone_example">3201458748</string>
 </resources>
