Crea activity de pedido

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,9 @@
     <string name="contacts">Contactos</string>
     <string name="contact_example">Pepito Perez</string>
     <string name="phone_example">3201458748</string>
+    <string name="do_order">Realizar pedido</string>
+    <string name="orders">Pedidos</string>
+    <string name="chicken">Pollo</string>
+    <string name="salami">Salami</string>
+    <string name="ham">Jamón</string>
 </resources>
